--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,34 +1,40 @@
 {{ define "body-classes" }}
 sticky-nav
 {{ end }}
+
 {{ define "content" }}
 <section id="main" class="content-container article-pad-v">
   <h1 id="title" style="margin-bottom: 0.75em">{{with .Title}}{{.}}{{else}}{{.Site.Title}}{{end}}</h1>
-  {{ if .Site.Params.Menu }}
-    {{ partial "homepage_config_menu" .Site.Params.Menu }}
-  {{ else if .Params.display_section }}
-    {{ $filtered_sections := first 1 (where .Sections "Type" "eq" .Params.display_section) }}
-    {{- if not $filtered_sections -}}
-      {{ $section_names := slice }}
-      {{ range .Sections }}
-        {{ $section_names = $section_names | append .Type }}
+ <div class="home h-feed">
+
+  <ul class="post-list list-unstyled list-of-titles">
+	{{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
+	{{ range $paginator.Pages  }}
+     <li class="h-entry">
+      <a href="{{ .Permalink }}" class="u-url">
+      {{ if .Title }}
+      <span class="post-title">{{ .Title }}</span><br>
+      {{ else }}
+      <div class="e-content">
+          {{ .Content }}
+      </div>
       {{ end }}
-      {{errorf "Couldn't find a section named '%s'. Try one of %v" .Params.display_section $section_names }}
-    {{- end -}}
-    {{ $args := dict
-        "section" (index $filtered_sections 0)
-        "section_title" .Params.display_section_expanded_title
-        "content" .Content
-      }}
-    {{ partial "homepage_display_section"  $args }}
-  {{ else if .Content }}
-    {{/* implies Content alone because Content + display_section covered earlier */}}
-    {{ .Content }}
-  {{ else }}
-    {{errorf `Couldn't figure out what to render for the homepage. Either:
-(1) add [[params.menu]] entries in your config.toml
-(2) create a top-level _index.md with content
-(3) create a top-level _index.md with a "display_section" key in the front-matter.`}}
+      <span class="post-meta">
+          <time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
+      </span>
+      <br>
+      {{ if .Params.categories }}
+      <span class="post-meta">
+        {{ range .Params.categories }}
+        #{{ . }} 
+        {{ end }}
+      </span>
+      {{ end }}
+      </a>
+    </li>
   {{ end }}
+  </ul>
+
+</div>
 </section>
 {{ end }}
