--- a/layouts/partials/single-article.html
+++ b/layouts/partials/single-article.html
@@ -8,7 +8,7 @@
   <meta itemprop="image" content="{{ partial "feature_image" . }}" />
   <h1 itemprop="name" id="title">{{ .Title }}</h1>
   <meta itemprop="headline" content="{{ .Title }}" />
-  {{ with .Params.tags }}
+  {{ with .Params.categories }}
   <div class="post-tags">
   {{ range . }}
     <a href="{{ (urlize (printf "tags/%s/" .)) | absLangURL }}">#{{ . }}</a>&nbsp;
@@ -23,9 +23,6 @@
       <div class="post-date">Created: <span itemprop="datePublished">{{ .Date.Format "January 2, 2006" }}</span></div>
       <div class="post-date">Last Edited: <span itemprop="dateModified">{{ .Lastmod.Format "January 2, 2006" }}</span></div>
     {{ end }}
-  {{ end }}
-  {{ if .Draft }}
-    <div class="post-date">{{ .WordCount }} words</div>
   {{ end }}
   <div itemprop="articleBody" id="content" class="article-body margin-top-2em">
     {{ .Content }}
