--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  lang="{{ .Site.LanguageCode }}"
+  lang="en"
   prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"
 >
   <head>
