--- a/layouts/partials/single-article.html
+++ b/layouts/partials/single-article.html
@@ -11,7 +11,7 @@
   {{ with .Params.categories }}
   <div class="post-tags">
   {{ range . }}
-    <a href="{{ (urlize (printf "tags/%s/" .)) | absLangURL }}">#{{ . }}</a>&nbsp;
+    <a href="{{ (urlize (printf "categories/%s/" .)) | absLangURL }}">#{{ . }}</a>&nbsp;
   {{ end }}
   </div>
   {{ end }}
