--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -30,4 +30,9 @@
     </nav>
   </div>
 {{ end }}
+
+{{ if .Site.Params.include_conversation }}
+<script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
+{{ end }}
+
 {{ end }}
