--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,5 +7,5 @@
 {{ end }}
 
 {{ define "footer" }}
-{{- partial "single-footer-customisation" . -}}
+{{- partial "custom_footer.html" . -}}
 {{ end }}
