--- a/layouts/partials/head_includes.html
+++ b/layouts/partials/head_includes.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="{{ relURL "/css/reboot.css" }}" />
 <link rel="stylesheet" href="{{ relURL "/css/style.css" }}" />
 <link rel="stylesheet" href="{{ relURL "/css/syntax.css" }}" />
-<script type="text/javascript" src="{{ relURL "/js/main.js" }}"></script>
+<link rel="stylesheet" href="{{ "custom.css" | relURL }}?{{ .Site.Params.theme_seconds }}">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora&display=swap">
 
-<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+<script type="text/javascript" src="{{ relURL "/js/main.js" }}"></script>
