--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,28 +1,28 @@
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-
-<link rel="apple-touch-icon" sizes="180x180" href="{{.Site.BaseURL}}/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{.Site.BaseURL}}/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{.Site.BaseURL}}/favicon-16x16.png">
-<link rel="manifest" href="{{.Site.BaseURL}}/site.webmanifest">
-<link rel="mask-icon" href="{{.Site.BaseURL}}/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-
-
-{{ with.Description }}<meta name="description" content="{{ . }}" />
+<meta name="viewport" content="width=device-width initial-scale=1.0">
+<meta name="twitter:card" content="summary">
+{{ with .Title }}
+<meta name="twitter:title" content="{{ . }}">
+<meta property="og:title" content="{{ . }}">
+{{ else }}
+<meta name="twitter:title" content="{{ .Site.Title }}">
+<meta property="og:title" content="{{ .Site.Title }}">
 {{ end }}
-<meta name="keywords" content="{{ if .Keywords }}{{ range.Keywords }}{{ . }},
-{{ end }}{{else if isset .Params "tags" }}{{ range.Params.tags }}{{ . }},
-{{ end }}{{ end }}">
-
-{{ template "_internal/opengraph.html" . }}
-<meta property="og:site_name" content="{{ .Site.Title }}" />
-
-{{ partial "twitter_cards_default_small.html" . }}
-
-{{ template "_internal/schema.html" . }}
+{{ if .IsHome }}
+<meta name="twitter:description" content="{{ .Site.Params.itunes_description | truncate 60 }}">
+<meta name="og:description" content="{{ .Site.Params.itunes_description | truncate 60 }}">
+<meta name="description" content="{{ .Site.Params.itunes_description }}">
+<meta name="twitter:image" content="{{ .Site.Author.avatar }}">
+<meta property="og:image" content="{{ .Site.Author.avatar }}">
+{{ else }}
+<meta name="twitter:description" content="{{ .Summary | truncate 60 }}">
+<meta name="og:description" content="{{ .Summary | truncate 60 }}">
+<meta name="description" content="{{ .Summary }}">
+{{ end }}
+{{ range .Params.photos }}
+<meta name="twitter:image" content="{{ . }}">
+<meta property="og:image" content="{{ . }}">
+{{ end }}
