--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -13,20 +13,28 @@
 {{ if (and (not .Parent.IsHome) (or .PrevInSection .NextInSection)) }}
   <div class="nav-bkg-50 content-container-narrow-pad bottom-links text-0p75 drop-shadow">
     <nav class="flex-row">
-    {{if .PrevInSection}}
+    {{ if .PrevInSection }}
     <a href="{{.PrevInSection.Permalink}}" class="flex-row v-center no-underline"  style="max-width:45%;">
+      {{ if .PrevInSection.Title }}
       <span class="text-1p5">←</span>&nbsp;<span class="re-underline">Previous: {{ .PrevInSection.Title }}</span>
+      {{ else }}
+      <span class="text-1p5">←</span>&nbsp;<span class="re-underline">Previous</span>
+      {{ end }}
     </a>
     {{else}}
       <span class="flex-row v-center"></span>
     {{end}}
-    {{if .NextInSection}}
+    {{ if .NextInSection }}
       <a href="{{.NextInSection.Permalink}}" class="flex-row v-center no-underline" style="max-width: 45%;">
+      {{ if .NextInSection.Title }}
       <span class="re-underline">Next: {{.NextInSection.Title}}</span>&nbsp;<span class="text-1p5">→</span>
+      {{ else }}
+      <span class="re-underline">Next</span>&nbsp;<span class="text-1p5">→</span>
+      {{ end }}
       </a>
-    {{else}}
+    {{ else }}
       <span class="flex-row v-center"></span>
-    {{end}}
+    {{ end }}
     </nav>
   </div>
 {{ end }}
