Add archive template plus microblog_head

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
     {{ .Summary | plainify | truncate 40 }} | {{ .Site.Title }}
     {{ end }}
     {{ end }}
-</title>\
+</title>
 
 <link rel="canonical" href="{{ .Permalink }}">
 <link rel="author" href="humans.txt" />
