--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -5,12 +5,14 @@
         <div class="sidepull-main archive-categories">
 {{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
 {{ if gt (len $list) 0 }}
+            <h3>Categories</h3>
             {{ range $list }}
             <span class="post-meta"><a href="{{ .Permalink }}">#{{ .Title }} </a></span>
             {{ end }}
+            <hr>
 {{ end }}
             <div class="full-archives h-feed">
-                <h3>Full Post List</h3>
+                <h3>All Posts</h3>
                 {{ $list := (where .Site.Pages "Type" "post") }}
                 {{ range $list }}
                 <p class="h-entry">
