--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,9 +8,17 @@
         {{ range $pages }}
         <li class="h-entry">
           <a href="{{ .Permalink}}">
-            <span class="post-title">{{ .Title }}</span>
+            {{ if .Title }}
+            <span class="post-title">{{ .Title }}</span><br>
+            {{ else }}
+            <div class="p-summary">
+            {{ .Summary | safeHTML }}
+            </div>
+            {{ end }}
             <br>
-            <span class="post-meta">{{ .Date.Format "January 2, 2006" }}</span>
+            <span class="post-meta">
+              <time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "January 2, 2006" }}</time>
+            </span>
             <br>
             <span class="post-meta">
               {{ range .Params.categories }}
