--- a/layouts/taxonomy/terms.html
+++ b/layouts/taxonomy/terms.html
@@ -5,17 +5,12 @@
     <ul id="list" class="list-unstyled list-of-titles">
       {{ range .Data.Terms.ByCount }}
       {{ with .Page }}
-        {{ $numDrafts := len (where .Pages ".Draft" true) }}
-          <li class="{{ if gt $numDrafts 0 }}draft{{ end }}">
-            <a href="{{ .RelPermalink}}">
+          <li>
+            <a href="{{ .Permalink}}">
               <span class="post-title">#{{ .Title }}</span>
               <br>
               <span class="post-meta">{{len .Pages}} {{if ne (len .Pages) 1}}entries{{else}}entry{{end}}</span>
               <br>
-              {{ if gt $numDrafts 0 }}
-                <span class="post-meta draft">Including {{ $numDrafts }} {{if ne $numDrafts 1}}drafts{{else}}draft{{end}}</span>
-                <br>
-              {{ end }}
               <span class="post-meta">Last updated {{ .Lastmod.Format "January 2, 2006" }}</span>
             </a>
           </li>
