Change block "content" to "main"

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
   {{ if .Draft }}draft{{ end }} look-sheet-bkg
 {{- end }}
 
-{{ define "content" }}
+{{ define "main" }}
 {{- partial "single-page" . -}}
 {{ end }}
 
