--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
     </nav>
   </div>
 
-  {{ block "content" . }}{{ end }}
+  {{ block "main" . }}{{ end }}
   
   {{ if not .Params.hide_footer }}
     {{ block "footer" . }}{{ end }}
