--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -1,16 +1,7 @@
-{{ define "content" }}
+{{ define "main" }}
 <section id="main" class="archive-categories content-container article-pad-v">
     <h1 id="title" style="margin-bottom: 0.75em">Archives</h1>
-{{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
-{{ if gt (len $list) 0 }}
-    <h3>Categories</h3>
-    {{ range $list }}
-    <span class="post-meta"><a href="{{ .Permalink }}">#{{ .Title }} </a></span>
-    {{ end }}
-    <hr>
-{{ end }}
     <div class="full-archives h-feed">
-        <h3>All Posts</h3>
         {{ $list := (where .Site.Pages "Type" "post") }}
         {{ range $list }}
         <p class="h-entry">
