--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,4 @@
-{{ define "content" }}
+{{ define "main" }}
 <section id="main" class="content-container article-pad-v">
   <h1 id="title" style="margin-bottom: 0.75em">{{.Title}}</h1>
   <div class="sidepull-container">
