--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 sticky-nav
 {{ end }}
 
-{{ define "content" }}
+{{ define "main" }}
 <section id="main" class="content-container article-pad-v">
   <h1 id="title" style="margin-bottom: 0.75em">{{with .Title}}{{.}}{{else}}{{.Site.Title}}{{end}}</h1>
   <div class="home h-feed sidepull-container">
