--- a/layouts/taxonomy/terms.html
+++ b/layouts/taxonomy/terms.html
@@ -1,4 +1,4 @@
-{{ define "content" }}
+{{ define "main" }}
 <section id="main" class="content-container article-pad-v">
   <div>
     <h1 id="title" style="margin-bottom: 0.75em">{{.Title}}</h1>
