--- a/layouts/section/replies.html
+++ b/layouts/section/replies.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section id="main" class="home h-feed content-container article-pad-v">
-<h1 id="title" style="margin-bottom: 0.75em">Recent Replies</h1>
+<h1 id="title" style="margin-bottom: 0.75em">Replies</h1>
 <div class="sidepull-container">
     <div class="sidepull-main">
         <ul id="list" class="post-list list-unstyled">
