--- a/layouts/partials/right-links.html
+++ b/layouts/partials/right-links.html
@@ -3,11 +3,11 @@
   <li>
   {{ if .Page.Params.redirect_url }}
     <a href="{{ .Page.Params.redirect_url }}">
-      <span class="post-title">{{ .Name }}</span>
+      <span>{{ .Name }}</span>
     </a>
   {{ else }}
     <a href="{{ .URL | relLangURL | safeURL }}">
-      <span class="post-title">{{ .Name }}</span>
+      <span>{{ .Name }}</span>
     </a>
   {{ end }}
   </li>
